# lego

./: .gitignore  .gitmodules
APEX-MR/: CMakeLists.txt  LICENSE  README.md  package.xml
APEX-MR/.github/workflows/: docker-image.yml
APEX-MR/config/lego_tasks/: plate_calibration.json  user_config.json
APEX-MR/config/lego_tasks/assembly_tasks/: R.json  S.json  big_chair.json  bridge.json  cliff.json  faucet.json  fish_high.json  guitar.json  rss.json  shift_loc.py  stairs_rotated.json  test.json  tower.json  vessel.json
APEX-MR/config/lego_tasks/env_setup/: env_setup_R.json  env_setup_S.json  env_setup_big_chair.json  env_setup_bridge.json  env_setup_cliff.json  env_setup_faucet.json  env_setup_fish_high.json  env_setup_guitar.json  env_setup_rss.json  env_setup_stairs_rotated.json  env_setup_test.json  env_setup_vessel.json
APEX-MR/config/lego_tasks/robot_properties/: gp4_tool_alt_DH.txt  gp4_tool_alt_assemble_DH.txt  gp4_tool_assemble_DH.txt  gp4_tool_disassemble_DH.txt  gp4_tool_handover_assemble_DH.txt  r2_base.txt
APEX-MR/config/lego_tasks/steps/: big_chair_seq.json  big_chair_steps.csv  bridge_seq.json  bridge_steps.csv  cliff_seq.json  cliff_steps.csv  faucet_seq.json  faucet_steps.csv  fish_high_seq.json  fish_high_steps.csv  guitar_seq.json  guitar_steps.csv  stairs_rotated_seq.json  stairs_rotated_steps.csv  vessel_seq.json  vessel_steps.csv
APEX-MR/docker/: Dockerfile  build.sh  launch.sh
APEX-MR/docs/: 01-configuration.md  02-task-assignment.md  03-motion-planning.md  04-execution.md
APEX-MR/include/: adg.h  instance.h  lego_policy.h  logger.h  planner.h  policy.h  shortcutter.h  task.h  tpg.h
APEX-MR/include/lego/: Lego.hpp
APEX-MR/include/lego/Utils/: FileIO.hpp  Math.hpp
APEX-MR/launch/: lego.launch  lego_assign.launch
APEX-MR/scripts/: benchmark.py  compute_calib.py  gotostart.sh
APEX-MR/src/: adg.cpp  instance.cpp  lego_policy.cpp  logger.cpp  planner.cpp  policy.cpp  shortcutter.cpp  task.cpp  tpg.cpp
APEX-MR/src/exe/: lego_assignment.cpp  lego_node.cpp
APEX-MR/src/lego/: Lego.cpp
APEX-MR/src/lego/Utils/: FileIO.cpp  Math.cpp
APEX-MR/src/python/: create_subtask.py  lego_library.json  stability_analysis_graph_input.py  stability_analysis_with_support.py  stability_node.py  task_assignment.py  task_assignment_node.py  utils.py
APEX-MR/srv/: StabilityScore.srv  TaskAssignment.srv
BrickSim/: .clang-format  .clang-tidy  .gitignore  AGENTS.md  LICENSE  README.md  pixi.toml  pyproject.toml  ruff.toml  ty.base.toml
BrickSim/.agents/: .gitignore
BrickSim/.github/actions/cache-bricksim-artifacts/: action.yml
BrickSim/.github/actions/free-disk-space/: action.yml
BrickSim/.github/workflows/: build-wheel.yml  ci.yml
BrickSim/demos/: demo_assembly.py  demo_assembly_structure1.json  demo_inhand.py  demo_keyboard_teleop.py  demo_teleop.py
BrickSim/docs/: CPP26_MODULES_CHEATSHEET.md
BrickSim/experiments/: evaluate_stability.py  static_analysis.py
BrickSim/native/: CMakeLists.txt  CMakePresets.json  isaac_deps.toml  source_deps.toml
BrickSim/native/cmake/: AbiCheck.cmake  BrickSimChecks.cmake  FetchIsaacDeps.cmake  FetchSourceDeps.cmake  PrepareArtifacts.cmake  prepare_artifacts.py
BrickSim/native/modules/bricksim/: api.cppm  vendor.cppm
BrickSim/native/modules/bricksim/core/: component_index.cppm  connections.cppm  graph.cppm  mass.cppm  specs.cppm
BrickSim/native/modules/bricksim/io/: topology.cppm
BrickSim/native/modules/bricksim/omni/: lego_runtime.cppm  lego_world.cppm  usd_physics_bridge.cppm
BrickSim/native/modules/bricksim/physx/: assembly.cppm  (+14 more)
BrickSim/native/py/: pybind11.cpp  pybind11_json.hpp
BrickSim/native/resources/: lsan.supp
BrickSim/native/sdk_patches/: eigen.patch  kit_include.patch  osqp.patch  usd_include.patch
BrickSim/native/shims/: features.h
BrickSim/native/shims/bits/: c++config.h
BrickSim/native/tests/: TestBrickSpecs.cpp  TestConstraintScheduler.cpp  TestConversions.cpp  TestDynamicGraph.cpp  TestLegoGraph.cpp  TestLegoGraphHooks.cpp  TestLegoGraphMultiSegEdge.cpp  TestLegoGraphSelfConnect.cpp  TestMultiKeyMap.cpp  TestMultiKeySet.cpp  TestPack2dMaxrect.cpp  TestPhysicsGraph.cpp  TestPhysicsGraphAssemblyClosure.cpp  TestPolyStore.cpp  TestRandomRegularGraphSchedulingPolicy.cpp  TestTopologyIO.cpp  TestUsdLegoGraph.cpp
BrickSim/native/tools/: solve_breakage.cpp  static_solve.cpp
BrickSim/python/: .gitignore  MANIFEST.in  isaacsim_rtx_compat.py  pyproject.toml  setup.py
BrickSim/python/bricksim/: __init__.py  __main__.py  _entry.py  colors.json  colors.py  core.pyi  extension.py  kit_runner.py  stable_lego.py  structures.py  units.py
BrickSim/python/bricksim/cli/: assemble_brick_expert.py  convert_topology.py  type_configs.py
BrickSim/python/bricksim/envs/: __init__.py  wrappers.py
BrickSim/python/bricksim/mdp/: brick_part.py  cache_token.py  connection_events.py  connection_state.py  connection_thresholds.py  events.py  hysteresis_binary_joint_action.py  isaaclab_shims.py  utils.py
BrickSim/python/bricksim/topology/: lego_library.json  legolization.py  ordering.py  schema.py  stabletext2brick.py  voxel_grid.py
BrickSim/python/bricksim/ui/: connection_overlay.py  file_picker.py  frame_time_hud.py  main_ui.py  selection_sync.py  step_one_frame_patch.py  structures_browsers.py  toolbar_patch.py
BrickSim/python/bricksim/utils/: breakage_debug.py  brick_usd.py  c4_rotation.py  connection_geometry.py  connection_usd.py  debug_draw.py  env_paths.py  matrix_loader.py  physics_step.py  typing.py
BrickSim/python/tests/: conftest.py
BrickSim/python/tests/mdp/: test_brick_part_xform.py  test_utils.py
BrickSim/python/tests/utils/: test_c4_rotation.py  test_connection_geometry.py
BrickSim/resources/: lego_colors_20250311.csv
BrickSim/resources/robots/SO101/: so101.urdf
BrickSim/resources/robots/r1lite/: r1lite_dual_arm.xml  r1lite_mobile_base.xml  r1lite_upper_body.xml  robot.urdf  robot_mjcf.xml  robot_mplib.srdf  robot_origin.urdf  test.xml
BrickSim/scripts/: build.sh  clangd-wrapper.sh  download_prebuilt_native.sh  find_bricksim_pid.py  generate_color_json.py
(+354 files in other folders)
