[project]
name = "bricksim-dev"
version = "0.0.0"
description = "BrickSim development environment"
requires-python = ">=3.11,<3.12"
dependencies = [
    "bricksim[all,stablelego]",
    "lerobot==0.4.4",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
    "xacro>=2.1.1",
]

[tool.uv]
package = false
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
exclude-dependencies = [
    # LeRobot introduces it, but it conflicts with openv-python
    "opencv-python-headless",
]
override-dependencies = [
    # Work around Isaac Sim's unconditional pywin32 dependency on non-Windows platforms.
    "pywin32==306 ; sys_platform == 'win32'",
    # LeRobot requires packaging>=24.2 while Isaac Lab pins packaging<24.
    "packaging==24.2",
    # Isaac Sim requires numpy 1.x.
    "numpy==1.26.4",
]

[tool.uv.sources]
bricksim = { path = "python", editable = true }
