[project]
name = "bricksim"
version = "0.1.0"
description = "BrickSim: A Physics-Based Simulator for Manipulating Interlocking Brick Assemblies"
requires-python = ">=3.11"
dependencies = [
    "accelerate",
    "gymnasium==1.2.0",
    "numpy<2",
    "opencv-python>=4.11",
    "requests",
    "scipy",
    "torch>=2.7",
    "tqdm",
]

[project.optional-dependencies]
isaacsim = ["isaacsim[all,extscache]==5.1.0"]
isaaclab = ["isaaclab==2.3.2.post1"]
all = [
    "isaacsim[all,extscache]==5.1.0",
    "isaaclab==2.3.2.post1",
]
stablelego = ["gurobipy==12.0.3"]

[project.urls]
Repository = "https://github.com/intelligent-control-lab/BrickSim.git"

[project.scripts]
bricksim = "bricksim.__main__:main"
bricksim-assemble-brick-expert = "bricksim.cli.assemble_brick_expert:main"
bricksim-convert-topology = "bricksim.cli.convert_topology:main"
bricksim-type-configs = "bricksim.cli.type_configs:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
